--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Sourcing Game V03.js?cachebust=1908726699"></script>
+        <script type="text/javascript" src="html5game/Sourcing Game 4.8.js?cachebust=459740021"></script>
 
         <!-- Builtin injector for injecting runner path -->
         
