--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <script>
     document.addEventListener("DOMContentLoaded", function() {
-        const erlaubteDomain = "https://andreascorazza9.wixsite.com/sourcing-game"; // Deine Wix-Domain
+        const erlaubteDomain = "https://andreascorazza9.wixsite.com/sourcing-game/blank"; // Deine Wix-Domain
 
         if (document.referrer.indexOf(erlaubteDomain) === -1) {
             document.body.innerHTML = "<h1>Zugriff verweigert</h1>";
