--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
     <!-- Custom PreHead code is injected here -->
-    // Get the token from the URL
+   // Get the token from the URL
 const urlParams = new URLSearchParams(window.location.search);
 const token = urlParams.get("token");
 
 // Allowed token(s)
-const allowedTokens = ["mysecuretoken123"];
+const allowedTokens = ["1234"];
 
-// Verify token before displaying content
+// Check if the token is valid
 if (!allowedTokens.includes(token)) {
     document.body.innerHTML = "<h2>Access Denied</h2>";
 }
