--- a/index.html
+++ b/index.html
@@ -2,16 +2,26 @@
 <html lang="en">
 
     <!-- Custom PreHead code is injected here -->
-   // Get the token from the URL
+// Get the token from the URL
 const urlParams = new URLSearchParams(window.location.search);
 const token = urlParams.get("token");
 
 // Allowed token(s)
-const allowedTokens = ["1234"];
+const allowedTokens = ["your-unique-token-here"];
 
 // Check if the token is valid
 if (!allowedTokens.includes(token)) {
+    // Stop further rendering of the page
     document.body.innerHTML = "<h2>Access Denied</h2>";
+
+    // Optionally, stop scripts from running
+    const scripts = document.getElementsByTagName('script');
+    for (let i = 0; i < scripts.length; i++) {
+        scripts[i].type = 'javascript/blocked'; // Disable script execution
+    }
+
+    // Prevent page from loading further
+    return;  // Stop execution here
 }
 
 
