--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ const urlParams = new URLSearchParams(window.location.search);
 const token = urlParams.get("token");
 
 // Allowed token(s)
-const allowedTokens = ["your-unique-token-here"];
+const allowedTokens = ["1234"];
 
 // Check if the token is valid
 if (!allowedTokens.includes(token)) {
