--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
 
 
     <head>
+    <meta charset="UTF-8">
+    <title>Your GitHub Page</title>
+    <script>
+        // Your token validation code here
+        const urlParams = new URLSearchParams(window.location.search);
+        const token = urlParams.get("token");
+
+        // Allowed token(s)
+        const allowedTokens = ["your-unique-token-here"];
+
+        // Check if the token is valid
+        if (!allowedTokens.includes(token)) {
+            // Block further content rendering and display "Access Denied"
+            document.body.innerHTML = "<h2>Access Denied</h2>";
+            return;  // Stop further code execution
+        }
+    </script>
+        
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name ="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
@@ -114,22 +132,6 @@
         
 
     <!-- Your page content goes here -->
-
-    <script>
-        // Your token validation code here
-        const urlParams = new URLSearchParams(window.location.search);
-        const token = urlParams.get("token");
-
-        // Allowed token(s)
-        const allowedTokens = ["1234"];
-
-        // Check if the token is valid
-        if (!allowedTokens.includes(token)) {
-            // Block further content rendering and display "Access Denied"
-            document.body.innerHTML = "<h2>Access Denied</h2>";
-            return;  // Stop further code execution
-        }
-    </script>
 
 </body>
 </html>
