--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             const token = urlParams.get("token");
 
             // Allowed token(s)
-            const allowedTokens = ["your-unique-token-here"];
+            const allowedTokens = ["1234"];
 
             // If the token is not valid, show "Access Denied"
             if (!allowedTokens.includes(token)) {
